--- a/index.html
+++ b/index.html
@@ -47,7 +47,48 @@
     </div>
 
     <!-- Welcome page -->
-    <section id="welcome-page"></section>
+    <section id="welcome-page">
+      <!-- Header box -->
+      <div class="intro-container">
+        <div class="inner-box">
+          <p>
+            Welcome to the
+            <br />
+            <span>Photography</span>
+            <br />
+            Group.
+          </p>
+        </div>
+      </div>
+      <!-- Reviews on home screen -->
+      <!-- Three reviews to the right over 700px -->
+      <!-- Three reviews under photographer under 700px -->
+      <div class="review-container">
+        <div class="review-one review">
+          <div class="text">
+            you are going to use a passage of Lorem Ipsum, you need to be sure
+            there isn't anything embarrassing hidden in the middle of text. All
+            the Lorem Ipsum generators on the Internet tend to repeat predefined
+            chunks as necessary,
+          </div>
+        </div>
+        <div class="review-two review">
+            <div class="text">
+                you are going to use a passage of Lorem Ipsum, you need to be sure
+                there isn't anything embarrassing hidden in the middle of text. All
+                the Lorem Ipsum generators on the Internet tend to repeat predefined
+                chunks as necessary,
+        </div>
+        </div>
+        <div class="review-three review">
+            <div class="text">
+                you are going to use a passage of Lorem Ipsum, you need to be sure
+                there isn't anything embarrassing hidden in the middle of text. All
+                the Lorem Ipsum generators on the Internet tend to repeat predefined
+                chunks as necessary,
+        </div>
+      </div>
+    </section>
 
     <!-- Services page -->
     <section id="services-page"></section>
