adding service page structure

--- a/Client/index.html
+++ b/Client/index.html
@@ -18,8 +18,8 @@
       <ul>
         <li><a href="#welcome-page">Welcome</a></li>
         <li><a href="#services-page">Services</a></li>
-        <li><a href="#testimonies-page">Testimonies</a></li>
-        <li><a href="#contact-page">Contact</a></li>
+        <li><a href="#testimonies-page">Gallery</a></li>
+        <li><a href="#contact-page">Reserve</a></li>
       </ul>
     </nav>
 
@@ -81,7 +81,89 @@
   </section>
 
   <!-- Services page -->
-  <section id="services-page"></section>
+  <section id="services-page">
+
+    <!-- header section -->
+    <div class="intro-container-service">
+      <div class="inner-box" id="intro-container-service">
+        </p>
+        <div class="about">
+          <h2> <span id="local">Services </span><br/>Satisfaction guaranteed or 100% of your money back! </h2>
+        </div>
+      </div>
+    </div>
+
+    <!-- services containers -->
+    <div class="service-box-container">
+      <div id="box-one" class="box">
+        <div class="box-header">
+          <div class="price"><h4>$75</h4></div>
+          <div class="time"><h4>1hr</h4></div>
+          <div class="description">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
+              the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, 
+              but also the leap into electronic typesetting, remaining essentially unchanged. It was  in
+               the 1960s with the release of  sheets containing Lorem Ipsum passages, and more recently with 
+               desktop publishing software like  PageMaker including versions of Lorem Ipsum.</p>
+          </div>
+          <button>Reserve</button>
+        </div>
+      </div>
+      <div id="box-two" class="box">
+        <div class="box-header">
+          <div class="price"><h4>$200</h4></div>
+          <div class="time"><h4>4hr</h4></div>
+          <div class="description">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
+              the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, 
+              but also the leap into electronic typesetting, remaining essentially unchanged. It was  in
+               the 1960s with the release of  sheets containing Lorem Ipsum passages, and more recently with 
+               desktop publishing software like  PageMaker including versions of Lorem Ipsum.</p>
+          </div>
+          <button>Reserve</button>
+        </div>
+      </div>
+      <div id="box-three" class="box">
+        <div class="box-header">
+          <div class="price"><h4>$375</h4></div>
+          <div class="time"><h4>8hr</h4></div>
+          <div class="description">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
+              the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, 
+              but also the leap into electronic typesetting, remaining essentially unchanged. It was  in
+               the 1960s with the release of  sheets containing Lorem Ipsum passages, and more recently with 
+               desktop publishing software like  PageMaker including versions of Lorem Ipsum.</p>
+          </div>
+          <button>Reserve</button>
+        </div>
+      </div>
+      <div id="box-four" class="box">
+        <div class="box-header">
+          <div class="price"><h4>$550</h4></div>
+          <div class="time"><h4>Full day</h4></div>
+          <div class="description">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
+              the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, 
+              but also the leap into electronic typesetting, remaining essentially unchanged. It was  in
+               the 1960s with the release of  sheets containing Lorem Ipsum passages, and more recently with 
+               desktop publishing software like  PageMaker including versions of Lorem Ipsum.</p>
+          </div>
+          <button>Reserve</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- information for all services -->
+    <div class="intro-container-service">
+      <div class="inner-box" id="intro-container-service">
+        </p>
+        <div class="about">
+          <h2>All of our services include full post production editing and printing. </h2>
+        </div>
+      </div>
+    </div>
+
+  </section>
 
   <!-- Testimony page -->
   <section id="testimonies-page"></section>
