adding gallery structure

--- a/Client/index.html
+++ b/Client/index.html
@@ -165,8 +165,25 @@
 
   </section>
 
-  <!-- Testimony page -->
-  <section id="testimonies-page"></section>
+  <!-- Testimony/gallery page -->
+  <section id="testimonies-page">
+
+        <!-- header section -->
+        <div class="intro-container-service">
+          <div class="inner-box" id="intro-container-service">
+            </p>
+            <div class="about">
+              <h2> <span id="local">Gallery and Testimonies </span><br/></h2>
+            </div>
+          </div>
+        </div>
+
+        <div id="photo-container">
+          <div class="photo-section"></div>
+          <div class="photo-section"></div>
+          <div class="photo-section"></div>
+        </div>
+  </section>
 
   <!-- Contact page -->
   <section id="contact-page"></section>
