adding photos to gallery from unsplash api call

--- a/Client/index.html
+++ b/Client/index.html
@@ -178,17 +178,39 @@
           </div>
         </div>
 
+         <!-- Photo section -->
         <div id="photo-container">
-          <div class="photo-section"></div>
-          <div class="photo-section"></div>
-          <div class="photo-section"></div>
+
+          <div class="photo-section">
+            <a href="" id="href-one"><img src="" alt="" id="photo-one"></a>
+            <div class="photo-review">
+              <div class="name" id="name-one"><span></span></div>
+            </div>
+          </div>
+          
+          <div class="photo-section">
+            <a href="" id="href-two"><img src="" alt="" id="photo-two"></a>
+            <div class="photo-review"></div>
+              <div class="name" id="name-two"></div>
+
+          </div>
+
+          <div class="photo-section">
+            <a href="" id="href-three"><img src="" alt="" id="photo-three"></a>
+            <div class="photo-review"></div>
+              <div class="name" id="name-three"></div>
+
+          </div>
         </div>
+
+        
   </section>
 
   <!-- Contact page -->
   <section id="contact-page"></section>
 
-  <script src="./assets//index.js"></script>
+  <script src="./assets/js/reviews.js"></script>
+  <script src="./assets/js/gallery.js"></script>
   <script src="https://kit.fontawesome.com/2342cb5074.js" crossorigin="anonymous"></script>
 </body>
 
