adding contact form structor

--- a/Client/index.html
+++ b/Client/index.html
@@ -61,8 +61,8 @@
     <!-- Three reviews under photographer under 700px -->
     <div class="review-container">
       <div class="review-one review">
-        <div class="text">
-          <p id="body-one" class="body"></p>
+        <div class="Submit">
+     submit     <submit-btnp id="body-one" class="body"></submit-btnp>
           <p id="name-one" class="name"></p>
         </div>
       </div>
@@ -222,7 +222,29 @@
   </section>
 
   <!-- Contact page -->
-  <section id="contact-page"></section>
+  <section id="contact-page">
+    <!-- header section -->
+    <div class="intro-container-service" id="contact-header">
+      <div class="inner-box" id="intro-container-service">
+        </p>
+        <div class="about">
+          <h2> <span id="local">Reserve</span><br/></h2>
+        </div>
+      </div>
+    </div>
+    <!-- Form section -->
+    <div class="form-container">
+      <form>
+        <label for="name" id="form-name">Name:</label>
+        <input type="text" id="form-name-input"> <br>
+        <label for="email" id="form-email">Email:</label>
+        <input type="email" id="form-email-input"><br>
+        <label for="number" id="form-number">Number:</label>
+        <input type="text" id="form-number-input"> <br>
+        <input type="Submit" name="submit" id="submit-btn">
+      </form>
+    </div>
+  </section>
 
   <script src="./assets/js/reviews.js"></script>
   <script src="./assets/js/gallery.js"></script>
