fixing photo download href bug

--- a/Client/index.html
+++ b/Client/index.html
@@ -209,7 +209,7 @@
           </div>
 
           <div class="photo-section">
-            <a href="" id="href-three target="_blank""><img src="" alt="" id="photo-three"></a>
+            <a href="" id="href-three" target="_blank""><img src="" alt="" id="photo-three"></a>
             <div class="photo-review"><span>NAME</span></div>
               <div class="name" id="name-three"></div>
               <p> - Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
