adding in review body

--- a/Client/index.html
+++ b/Client/index.html
@@ -20,7 +20,7 @@
         <li><a href="#welcome-page">Welcome</a></li>
         <li><a href="#services-page">Services</a></li>
         <li><a href="#testimonies-page">Gallery</a></li>
-        <li><a href="#contact-page">Reserve</a></li>
+        <!-- <li><a href="#contact-page">Reserve</a></li> -->
       </ul>
     </nav>
 
@@ -53,7 +53,7 @@
         </p>
         <!-- about snippet -->
         <div class="about">
-          <h2> <span id="local">Local, </span><br/> talented, goal driven group of photographers.</h2>
+          <h2> <span id="local">Local, </span><br /> talented, goal driven group of photographers.</h2>
         </div>
       </div>
     </div>
@@ -63,20 +63,24 @@
     <div class="review-container">
       <div class="review-one review">
         <div class="Submit">
-     submit     <submit-btnp id="body-one" class="body"></submit-btnp>
-          <p id="name-one" class="name"></p>
+          <p id="body-one" class="body">Great photographer to work with. Everyone was energetic, engaging, and a lot of fun! We love our wedding pictures!</p>
+          <p id="name-one" class="name">April Berry</p>
         </div>
       </div>
       <div class="review-two review">
         <div class="text">
-          <p id="body-two" class="body"></p>
-          <p id="name-two" class="name"></p>
+          <p id="body-two" class="body">There just aren’t enough words to possibly describe how amazing each and every
+            photo that taryn snaps. She has a magical way of finding the perfect angle, lighting and of course
+            expressions</p>
+          <p id="name-two" class="name">Jessica Taylor</p>
         </div>
       </div>
       <div class="review-three review">
         <div class="text">
-          <p id="body-three" class="body"></p>
-          <p id="name-three" class="name"></p>
+          <p id="body-three" class="body">Easily the best experience with photographers to date! Photography Group was
+            super personable and very talented at their craft. They made sure everyone was comfortable and enjoying the
+            experience. Thanks!</p>
+          <p id="name-three" class="name">John Doe</p>
         </div>
 
   </section>
@@ -89,7 +93,7 @@
       <div class="inner-box" id="intro-container-service">
         </p>
         <div class="about">
-          <h2> <span id="local">Services </span><br/>Satisfaction guaranteed or 100% of your money back! </h2>
+          <h2> <span id="local">Services </span><br />Satisfaction guaranteed or 100% of your money back! </h2>
         </div>
       </div>
     </div>
@@ -98,56 +102,76 @@
     <div class="service-box-container">
       <div id="box-one" class="box">
         <div class="box-header">
-          <div class="price"><h4>$75</h4></div>
-          <div class="time"><h4>1hr</h4></div>
+          <div class="price">
+            <h4>$75</h4>
+          </div>
+          <div class="time">
+            <h4>1hr</h4>
+          </div>
           <div class="description">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
-              the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, 
-              but also the leap into electronic typesetting, remaining essentially unchanged. It was  in
-               the 1960s with the release of  sheets containing Lorem Ipsum passages, and more recently with 
-               desktop publishing software like  PageMaker including versions of Lorem Ipsum.</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+              the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+              scrambled it to make a type specimen book. It has survived not only five centuries,
+              but also the leap into electronic typesetting, remaining essentially unchanged. It was in
+              the 1960s with the release of sheets containing Lorem Ipsum passages, and more recently with
+              desktop publishing software like PageMaker including versions of Lorem Ipsum.</p>
           </div>
           <button>Reserve</button>
         </div>
       </div>
       <div id="box-two" class="box">
         <div class="box-header">
-          <div class="price"><h4>$200</h4></div>
-          <div class="time"><h4>4hr</h4></div>
+          <div class="price">
+            <h4>$200</h4>
+          </div>
+          <div class="time">
+            <h4>4hr</h4>
+          </div>
           <div class="description">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
-              the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, 
-              but also the leap into electronic typesetting, remaining essentially unchanged. It was  in
-               the 1960s with the release of  sheets containing Lorem Ipsum passages, and more recently with 
-               desktop publishing software like  PageMaker including versions of Lorem Ipsum.</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+              the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+              scrambled it to make a type specimen book. It has survived not only five centuries,
+              but also the leap into electronic typesetting, remaining essentially unchanged. It was in
+              the 1960s with the release of sheets containing Lorem Ipsum passages, and more recently with
+              desktop publishing software like PageMaker including versions of Lorem Ipsum.</p>
           </div>
           <button>Reserve</button>
         </div>
       </div>
       <div id="box-three" class="box">
         <div class="box-header">
-          <div class="price"><h4>$375</h4></div>
-          <div class="time"><h4>8hr</h4></div>
+          <div class="price">
+            <h4>$375</h4>
+          </div>
+          <div class="time">
+            <h4>8hr</h4>
+          </div>
           <div class="description">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
-              the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, 
-              but also the leap into electronic typesetting, remaining essentially unchanged. It was  in
-               the 1960s with the release of  sheets containing Lorem Ipsum passages, and more recently with 
-               desktop publishing software like  PageMaker including versions of Lorem Ipsum.</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+              the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+              scrambled it to make a type specimen book. It has survived not only five centuries,
+              but also the leap into electronic typesetting, remaining essentially unchanged. It was in
+              the 1960s with the release of sheets containing Lorem Ipsum passages, and more recently with
+              desktop publishing software like PageMaker including versions of Lorem Ipsum.</p>
           </div>
           <button>Reserve</button>
         </div>
       </div>
       <div id="box-four" class="box">
         <div class="box-header">
-          <div class="price"><h4>$550</h4></div>
-          <div class="time"><h4>Full day</h4></div>
+          <div class="price">
+            <h4>$550</h4>
+          </div>
+          <div class="time">
+            <h4>Full day</h4>
+          </div>
           <div class="description">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
-              the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, 
-              but also the leap into electronic typesetting, remaining essentially unchanged. It was  in
-               the 1960s with the release of  sheets containing Lorem Ipsum passages, and more recently with 
-               desktop publishing software like  PageMaker including versions of Lorem Ipsum.</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+              the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+              scrambled it to make a type specimen book. It has survived not only five centuries,
+              but also the leap into electronic typesetting, remaining essentially unchanged. It was in
+              the 1960s with the release of sheets containing Lorem Ipsum passages, and more recently with
+              desktop publishing software like PageMaker including versions of Lorem Ipsum.</p>
           </div>
           <button>Reserve</button>
         </div>
@@ -169,62 +193,65 @@
   <!-- Testimony/gallery page -->
   <section id="testimonies-page">
 
-        <!-- header section -->
-        <div class="intro-container-service">
-          <div class="inner-box" id="intro-container-service">
-            </p>
-            <div class="about">
-              <h2> <span id="local">Gallery and Testimonies </span><br/></h2>
-            </div>
-          </div>
+    <!-- header section -->
+    <div class="intro-container-service">
+      <div class="inner-box" id="intro-container-service">
+        </p>
+        <div class="about">
+          <h2> <span id="local">Gallery and Testimonies </span><br /></h2>
         </div>
+      </div>
+    </div>
 
-        <div class="btn-div">
-          <button id="btn">Click here for more photos</button>
+    <div class="btn-div">
+      <button id="btn">Click here for more photos</button>
+    </div>
+
+    <!-- Photo section -->
+    <div id="photo-container">
+
+      <div class="photo-section">
+        <a href="" id="href-one" target="_blank"><img src="" alt="" id="photo-one"></a>
+        <div class="photo-review">
+          <div class="name" id="name-one"><span>NAME</span></div>
+          <p> - Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+            the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book. It has survived not only five centuries,
+            but also the leap into electronic typesetting, remaining essentially unchanged. It was in
+            the 1960s with the release of sheets containing Lorem Ipsum passages, and more recently with
+            desktop publishing software like PageMaker including versions of Lorem Ipsum.</p>
         </div>
+      </div>
 
-         <!-- Photo section -->
-        <div id="photo-container">
+      <div class="photo-section">
+        <a href="" id="href-two" target="_blank"><img src="" alt="" id="photo-two"></a>
+        <div class="photo-review"><span>NAME</span></div>
+        <div class="name" id="name-two"></div>
+        <p> - Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+          the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only five centuries,
+          but also the leap into electronic typesetting, remaining essentially unchanged. It was in
+          the 1960s with the release of sheets containing Lorem Ipsum passages, and more recently with
+          desktop publishing software like PageMaker including versions of Lorem Ipsum.</p>
+      </div>
 
-          <div class="photo-section"> 
-            <a href="" id="href-one" target="_blank"><img src="" alt="" id="photo-one"></a>
-            <div class="photo-review">
-              <div class="name" id="name-one"><span>NAME</span></div>
-              <p> - Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
-                the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, 
-                but also the leap into electronic typesetting, remaining essentially unchanged. It was  in
-                 the 1960s with the release of  sheets containing Lorem Ipsum passages, and more recently with 
-                 desktop publishing software like  PageMaker including versions of Lorem Ipsum.</p>
-            </div>
-          </div>
-          
-          <div class="photo-section">
-            <a href="" id="href-two" target="_blank"><img src="" alt="" id="photo-two"></a>
-            <div class="photo-review"><span>NAME</span></div>
-              <div class="name" id="name-two"></div>
-              <p> - Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
-                the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, 
-                but also the leap into electronic typesetting, remaining essentially unchanged. It was  in
-                 the 1960s with the release of  sheets containing Lorem Ipsum passages, and more recently with 
-                 desktop publishing software like  PageMaker including versions of Lorem Ipsum.</p>
-          </div>
-
-          <div class="photo-section">
-            <a href="" id="href-three" target="_blank""><img src="" alt="" id="photo-three"></a>
-            <div class="photo-review"><span>NAME</span></div>
-              <div class="name" id="name-three"></div>
-              <p> - Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
-                the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, 
-                but also the leap into electronic typesetting, remaining essentially unchanged. It was  in
-                 the 1960s with the release of  sheets containing Lorem Ipsum passages, and more recently with 
-                 desktop publishing software like  PageMaker including versions of Lorem Ipsum.</p>
-          </div>
-        </div>
+      <div class="photo-section">
+        <a href="" id="href-three" target="_blank""><img src="" alt="" id=" photo-three"></a>
+        <div class="photo-review"><span>NAME</span></div>
+        <div class="name" id="name-three"></div>
+        <p> - Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+          the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only five centuries,
+          but also the leap into electronic typesetting, remaining essentially unchanged. It was in
+          the 1960s with the release of sheets containing Lorem Ipsum passages, and more recently with
+          desktop publishing software like PageMaker including versions of Lorem Ipsum.</p>
+      </div>
+    </div>
   </section>
 
   <!-- Contact page -->
-  <section id="contact-page">
-    <!-- header section -->
+  <!-- <section id="contact-page">
+    header section
     <div class="intro-container-service" id="contact-header">
       <div class="inner-box" id="intro-container-service">
         </p>
@@ -232,9 +259,9 @@
           <h2> <span id="local">Reserve</span><br/></h2>
         </div>
       </div>
-    </div>
-    <!-- Form section -->
-    <div class="form-container">
+    </div> -->
+  <!-- Form section -->
+  <!-- <div class="form-container">
       <form class="form">
         <label for="name" id="form-name" class="form-label">Name:</label>
         <input type="text" id="form-name-input" class="form-input"> <br>
@@ -246,13 +273,16 @@
         <input type="Submit" name="submit" id="submit-btn">
       </form>
     </div>
-  </section>
+  </section> -->
 
   <footer>
     <div class="icons">
-      <a href="https://github.com/davidherring1998" target="_blank"><i class="fa fa-github" style="font-size:24px"></i></a>
-      <a href="https://twitter.com/DavidHe95802361" target="_blank"><i class="fa fa-twitter" style="font-size:24px" id="twitter"></i></a>
-      <a href="https://www.linkedin.com/in/david-herring-051bba241/" target="_blank"> <i class="fa fa-linkedin-square" style="font-size:24px"></i></a>
+      <a href="https://github.com/davidherring1998" target="_blank"><i class="fa fa-github"
+          style="font-size:24px"></i></a>
+      <a href="https://twitter.com/DavidHe95802361" target="_blank"><i class="fa fa-twitter" style="font-size:24px"
+          id="twitter"></i></a>
+      <a href="https://www.linkedin.com/in/david-herring-051bba241/" target="_blank"> <i class="fa fa-linkedin-square"
+          style="font-size:24px"></i></a>
 
     </div>
     <div class="bio">
