adding names of artist to gallery section

--- a/Client/index.html
+++ b/Client/index.html
@@ -213,7 +213,7 @@
       <div class="photo-section">
         <a href="" id="href-one" target="_blank"><img src="" alt="" id="photo-one"></a>
         <div class="photo-review">
-          <div class="name" id="name-one"><span>NAME</span></div>
+          <div class="name" id="name-one"><p id="nameOne"></p></div>
           <p> - Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
             the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
             scrambled it to make a type specimen book. It has survived not only five centuries,
@@ -225,8 +225,8 @@
 
       <div class="photo-section">
         <a href="" id="href-two" target="_blank"><img src="" alt="" id="photo-two"></a>
-        <div class="photo-review"><span>NAME</span></div>
-        <div class="name" id="name-two"></div>
+        <div class="photo-review"></div>
+        <div class="name" id="name-two"><p id="nameTwo"></p></div>
         <p> - Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
           the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
           scrambled it to make a type specimen book. It has survived not only five centuries,
@@ -235,8 +235,8 @@
           desktop publishing software like PageMaker including versions of Lorem Ipsum.</p>
       </div>
 
-      <div class="photo-section">
-        <a href="" id="href-three" target="_blank""><img src="" alt="" id=" photo-three"></a>
+      <!-- <div class="photo-section">
+        <a href="" id="href-three" target="_blank""><img src="" alt="" id="photo-two"></a>
         <div class="photo-review"><span>NAME</span></div>
         <div class="name" id="name-three"></div>
         <p> - Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
@@ -245,7 +245,7 @@
           but also the leap into electronic typesetting, remaining essentially unchanged. It was in
           the 1960s with the release of sheets containing Lorem Ipsum passages, and more recently with
           desktop publishing software like PageMaker including versions of Lorem Ipsum.</p>
-      </div>
+      </div> -->
     </div>
   </section>
 
