fixing font issue and addi ng refresh button for photos

--- a/Client/index.html
+++ b/Client/index.html
@@ -63,7 +63,8 @@
     <div class="review-container">
       <div class="review-one review">
         <div class="Submit">
-          <p id="body-one" class="body">Great photographer to work with. Everyone was energetic, engaging, and a lot of fun! We love our wedding pictures!</p>
+          <p id="body-one" class="body">Great photographer to work with. Everyone was energetic, engaging, and a lot of
+            fun! We love our wedding pictures!</p>
           <p id="name-one" class="name">April Berry</p>
         </div>
       </div>
@@ -109,7 +110,7 @@
             <h4>1hr</h4>
           </div>
           <div class="description">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.
               the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
               scrambled it to make a type specimen book. It has survived not only five centuries,
               but also the leap into electronic typesetting, remaining essentially unchanged. It was in
@@ -128,7 +129,7 @@
             <h4>4hr</h4>
           </div>
           <div class="description">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.
               the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
               scrambled it to make a type specimen book. It has survived not only five centuries,
               but also the leap into electronic typesetting, remaining essentially unchanged. It was in
@@ -147,7 +148,7 @@
             <h4>8hr</h4>
           </div>
           <div class="description">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.
               the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
               scrambled it to make a type specimen book. It has survived not only five centuries,
               but also the leap into electronic typesetting, remaining essentially unchanged. It was in
@@ -166,7 +167,7 @@
             <h4>Full day</h4>
           </div>
           <div class="description">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.
               the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
               scrambled it to make a type specimen book. It has survived not only five centuries,
               but also the leap into electronic typesetting, remaining essentially unchanged. It was in
@@ -183,7 +184,7 @@
       <div class="inner-box" id="intro-container-service">
         </p>
         <div class="about">
-          <h2>All of our services include full post production editing and printing. </h2>
+          <h2 id="about-footer">All of our services include full post production editing and printing. </h2>
         </div>
       </div>
     </div>
@@ -203,17 +204,15 @@
       </div>
     </div>
 
-    <div class="btn-div">
-      <button id="btn">Click here for more photos</button>
-    </div>
-
     <!-- Photo section -->
     <div id="photo-container">
 
       <div class="photo-section">
         <a href="" id="href-one" target="_blank"><img src="" alt="" id="photo-one"></a>
         <div class="photo-review">
-          <div class="name" id="name-one"><p id="nameOne"></p></div>
+          <div class="name" id="name-one">
+            <p id="nameOne"></p>
+          </div>
           <p> - Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
             the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
             scrambled it to make a type specimen book. It has survived not only five centuries,
@@ -226,7 +225,9 @@
       <div class="photo-section">
         <a href="" id="href-two" target="_blank"><img src="" alt="" id="photo-two"></a>
         <div class="photo-review"></div>
-        <div class="name" id="name-two"><p id="nameTwo"></p></div>
+        <div class="name" id="name-two">
+          <p id="nameTwo"></p>
+        </div>
         <p> - Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
           the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
           scrambled it to make a type specimen book. It has survived not only five centuries,
@@ -246,6 +247,9 @@
           the 1960s with the release of sheets containing Lorem Ipsum passages, and more recently with
           desktop publishing software like PageMaker including versions of Lorem Ipsum.</p>
       </div> -->
+    </div>
+    <div class="btn-div">
+      <button id="refresh-btn">Click here to see more photos</button>
     </div>
   </section>
 
@@ -276,6 +280,10 @@
   </section> -->
 
   <footer>
+    <div class="bio">
+      <h6>&copy; Photography Group</h6>
+    </div>
+
     <div class="icons">
       <a href="https://github.com/davidherring1998" target="_blank"><i class="fa fa-github"
           style="font-size:24px"></i></a>
@@ -285,8 +293,9 @@
           style="font-size:24px"></i></a>
 
     </div>
-    <div class="bio">
-      <h6>&copy; Photography Group</h6>
+
+    <div id="contact-email">
+      <p><a href="mailto:david.1998.herring@gmail.com">Contact</a></p>
     </div>
   </footer>
 
